# slither

./: Cargo.toml  Untitled-1.bat  install.sh  ref.md  run.bat  run.sh
.cargo/: config.toml
src/: macros.rs  main.rs  manager.rs  nmanager.rs  plugin.rs  wrapped.rs
src/plugins/: core_plugin.rs  mod.rs
src/utils/: client.rs  macros.rs  mod.rs  plugin.rs
